2016-09-29 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/fiid/fiid.c (_fiid_template_field_start)
	(_fiid_template_field_end, _fiid_template_field_len)
	(_fiid_template_block_len): Create various internal versions of
	functions which can be used internally to avoid duplicate API
	checks in _fiid_template_check_valid_keys.
	
2016-09-28 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/util/ipmi-rmcpplus-util.c: Do not secure_memset
	buffers with usernames.  Do not consider username to be
	secure_memset necessary.

2016-09-28 Albert Chu <chu11@llnl.gov>

	Cleanup over-excessive use of secure_memset, should only be used
	to clear buffers containing cryptographic keys (i.e. passwords).

	* libipmimonitoring/ipmi_monitoring.c (ipmi_monitoring_ctx_create):
	Remove unnecessary call to secure_memset().

	* ipmipower/ipmipower_powercmd.c (_send_packet, _recv_packet):
	Call secure_memset only when necessary (using plain passwords).

	* ipmiconsole/ipmiconsole.c (main, _stdin): Remove unnecessary and
	excessive calls to secure_memset.

	* libfreeipmi/util/ipmi-rmcpplus-util.c (ipmi_calculate_rmcpplus_session_keys)
	(ipmi_rmcpplus_check_packet_session_authentication_code)
	(ipmi_rmcpplus_check_rakp_2_key_exchange_authentication_code)
	(ipmi_calculate_rakp_3_key_exchange_authentication_code)
	(ipmi_rmcpplus_check_rakp_4_integrity_check_value): Fix secure
	memset of invalid/unnecessary buffers.

	* libfreeipmi/interface/ipmi-lan-interface.c (assemble_ipmi_lan_pkt):
	Fix secure memset of unnecessary buffers.

	* libfreeipmi/interface/ipmi-rmcpplus-interface.c (_construct_session_trlr_authentication_code):
	Fix secure memset of unnecessary buffers.

	* libipmiconsole/ipmiconsole_processing.c: Remove secure memset of
	unnecessary buffers.

	* libfreeipmi/fiid/fiid.c (fiid_obj_clear, fiid_obj_clear_field):
	Change secure_memset to memset.  Will adjust via new fiid flag in
	later change.
	
2016-09-29 Albert Chu <chu11@llnl.gov>
